--- a/src/pages/home/components/post/Post.css
+++ b/src/pages/home/components/post/Post.css
@@ -7,6 +7,7 @@ a {
   border-radius: 6px;
   border: solid 1px #979797;
   background-color: #fff;
+  height: 90px;
 }
 
 .content-post {
@@ -42,6 +43,7 @@ a {
   border: 0;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
+  height: 90px;
 }
 
 .like-button::after {
