--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,13 @@
   margin: auto;
   padding: 0 1rem;
 }
+
+.header {
+  /* border-bottom: 1px solid; */
+  /* max-width: 1100px; */
+  /* height: 114px; */
+  /* margin: 0 0 70px; */
+  padding: 20px 0px 20px 0px;
+  box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
+  background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
+}
